# AnimoAPI

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
AnimoAPI/: .env.demo  Procfile  Readme.md  asgi.py  settings.py  urls.py  wsgi.py
articles/: admin.py  models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py
