[tool.poetry]
name = "animoapi"
version = "0.1.0"
description = ""
authors = ["preitychib <preeti.chib2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.14.0"
Django = "^4.1.3"
environs = "^9.5.0"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
